# genovisio_isv

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: main.yml
isv/: annotate.py  main.py  predict.py
isv/src/: cnv_region.py  constants.py  dict_utils.py  genovisio_sources_db.py
isv/src/annotators/: __init__.py  annotated_sv.py  gene_types.py  hi_gene.py  hi_regions.py  hi_ts_genes.py  regulatory.py  ts_regions.py
tests/: annotation.json  expected_output.json
