[tool.poetry]
name = "isv"
version = "0.2.0"
description = "CNV annotation and pathogenicity prediction tool"
authors = ["Michaela Gaziova <michaela.gaziova@geneton.sk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
pandas = ">=2.2"
pymongo = "==4.8"
joblib = ">=1.4"
xgboost = "==2.1.0"

[tool.poetry.scripts]
isv = "isv.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
